build(plugins): fixed faulty build on windows, not enough memort. ISSUES CLOSED: #149