@@ -164,8 +164,9 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
-                	<forkCount>4</forkCount>
+                	<forkCount>6</forkCount>
                 	<reuseForks>false</reuseForks>
+                  <argLine>-Xmx2048m -XX:MaxPermSize=512m</argLine>
                 </configuration>
             </plugin>
             <plugin>
